tests/typing/errors/type_mismatch/poly_smtlib.smt2
(set-logic ALL)
(declare-sort-parameter A)
(declare-fun f (A A) Bool)
(assert (f 0 0.0))
